--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -32,30 +32,39 @@
 
         <div class="filters">
             <p>Фильтры</p>
-            <form action="{% url 'filter' %}" method="get">
+<!--            <form action="{% url 'filter' %}" method="get">-->
+                <div class="filter-cat">
                 {% for category in view.get_category %}
-<!--                <input type="checkbox" class="filter-checkbox" data-filter="genre" value="2">-->
                 <li>
                     <input type="checkbox" name="category" value="{{ category.id }}">
                     <label>{{ category.title }}</label>
                 </li>
-
                 {% endfor %}
+                </div>
+                <br>
+                <div class="filter-price">
+                    <li>
+                        <input type="checkbox" name="price" min="0" max="999" id="price-0-1000">
+                        <label for="price-0-1000">до 1000</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="price_from" min="1000" max="5000" id="price-1000-5000">
+                        <label for="price-1000-5000">от 1000 до 5000</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="price_from" min="5000" id="price-5000-inf">
+                        <label for="price-5000-inf">от 5000</label>
+                    </li>
+                </div>
+
                 <button type="submit">Найти</button>
-            </form>
-<!--            {% for category in categories %}-->
-<!--                <ul>-->
-<!--                    <li><a href="{% url 'categories' slug=category.slug %}">{{ category.title }}</a></li>-->
-<!--                </ul>-->
-<!--            {% endfor %}-->
-<!--                <ul>-->
-<!--                    <li><a href="{% url 'flowers' %}">Показать все</a></li>-->
-<!--                </ul>-->
+<!--            </form>-->
         </div>
 
-        <div class="flowers-list">
+        <div class="flowers-list" id="flowers-list-id">
             {% for flower in flowers %}
                 {% if flower.product == 'Комнатные растения' %}
+
                 <div class="flower">
                     <a href="{% url 'flower' slug=flower.slug %}">
                         <img src="{{ flower.image.url }}">
@@ -67,7 +76,8 @@
                         {% if flower.quantity > 0 %}
                             <a href="{% url 'add-cart' flower.id %}" class="cart-button">Добавить в корзину</a>
                         {% else %}
-                            <p>Нет в наличии</p>
+
+                            <p style="margin: 5px;">Нет в наличии</p>
                         {% endif %}
                     </div>
                 </div>
@@ -88,4 +98,7 @@
 
     </section>
 
+
+<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="{% static 'js/flowers.js' %}"></script>
 {% endblock base_content %}
