--- a/ShopFlowers/cart/static/css/cart_style.css
+++ b/ShopFlowers/cart/static/css/cart_style.css
@@ -145,6 +145,7 @@
     padding-bottom: 10px;
 
 }
+
 .select {
     width: 300px;
     height: 30px;
@@ -157,4 +158,32 @@
 .select option {
      color: rgba(40, 49, 6, 1);
     background: transparent;
+}
+
+
+/* Форма */
+.form-input-order {
+	border: none;
+	width: 340px;
+	height: 30px;
+	margin-bottom: 10px;
+	border: 2px solid rgba(114, 121, 88, 1);
+	border-radius: 10px;
+    background: transparent;
+}
+
+.form-choice-order {
+	border: none;
+	width: 348px;
+	height: 35px;
+	margin-bottom: 10px;
+	border: 2px solid rgba(114, 121, 88, 1);
+	border-radius: 10px;
+    background: transparent;
+}
+
+.form-choice-order option {
+    height: 50px;
+    color: rgba(40, 49, 6, 1);
+    background: rgba(40, 49, 6, 0.3);
 }
