--- a/ShopFlowers/users/templates/profile.html
+++ b/ShopFlowers/users/templates/profile.html
@@ -10,25 +10,29 @@
 {% block base_content %}
 <section class="popup">
     <div class="menu_profile">
-        <h2 class="title">Личный кабинет</h2>
+        <div class="menu">
             <ul>
-                <li><a class="bt-my-profile">Настройки</a></li>
-                <li><a class="bt-my-orders">Мои заказы</a></li>
+                <li>
+                    <a class="bt-my-profile" style="background-color: rgba(202, 208, 183, 0.6);border: 1px solid rgba(114, 121, 88, 1);">
+                        Настройки
+                    </a>
+                </li>
+                <li><a href="{% url 'order-profile' %}" class="bt-my-orders">Мои покупки</a></li>
                 <li><a class="bt-my-feedback">Мои отзывы</a></li>
                 <li><a class="bt-my-like">Избранное</a></li>
                 <li><a class="bt-my-cart">Корзина</a></li>
             </ul>
+        </div>
     </div>
 
     <div class="overlay">
         <form method="post" action="{% url 'profile' %}" enctype="multipart/form-data">
         {% csrf_token %}
-
             {% if user.photo %}
             <div class="name-photo">
                 <div class="bt-user-change">
                     <img class="user-photo" src="{{ user.photo.url }}">
-                    <p class="photo-change">{{ form.photo }}</p>
+<!--                    {{ form.photo }}-->
                 </div>
                 <h2 class="user-name">{{ user.username }}</h2>
             </div>
@@ -42,7 +46,7 @@
             </div>
             {% endif %}
 
-        <div class="popup-my-settings">
+        <div class="settings">
             <div class="form-grid">
                 <div class="form-1">
                     <div class="form-error">{{ form.non_field_errors }}</div>
@@ -62,30 +66,14 @@
                 </div>
             </div>
             <button class="save-profile" type="submit">Сохранить</button>
+
         </div>
         </form>
-
-        <div class="popup-my-orders">
-            <h2>Orders</h2>
-        </div>
-
-        <div class="popup-my-feedback">
-            <h2>Feedback</h2>
-        </div>
-
-        <div class="popup-my-like">
-            <h2>Like</h2>
-        </div>
-
-        <div class="popup-my-cart">
-            <h2>Cart</h2>
-        </div>
-
     </div>
 </section>
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-<script src="{% static 'js/user.js' %}"></script>
+<!--<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>-->
+<!--<script src="{% static 'js/user.js' %}"></script>-->
 
 {% endblock base_content %}
