--- a/ShopFlowers/users/static/css/profile_style.css
+++ b/ShopFlowers/users/static/css/profile_style.css
@@ -201,7 +201,7 @@ li:nth-child(4)::marker {
     margin-top: 70px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 50px;
+    column-gap: 30px;
 }
 
 .order {
@@ -314,4 +314,16 @@ li:nth-child(4)::marker {
     text-decoration: none;
     color: rgba(40, 49, 6, 1);
     font-size: 10pt;
+}
+
+
+/* Сообщение об отмене */
+.messages {
+    background: rgba(209, 216, 184, 0.3); 
+    border-radius: 15px;   
+}
+
+.messages-text {
+
+    color: rgba(40, 49, 6, 1);
 }
